--- a/impressum.html
+++ b/impressum.html
@@ -9,19 +9,31 @@
   <body>
     <h1>Impressum und Datenschutz</h1>
 
-    Impressum<br />
-    Datenschutz<br />
-    Ich sammle keinerlei Daten. Diese Seite benutzt jedoch Ressourcen von
-    Drittanbietern welche Tracking auslösen können. Die Seite ist auf Github
-    Pages gehostet und ich habe keinen Einfluss welche Daten von Github
-    gesammelt werden, bitte beachten Sie dazu die entsprechenden Informationen
-    auf github.com. Github sammelt personenbezogene Informationen von Besuchern,
-    u.a. die IP, um gesetzliche Bestimmungen zu erfüllen und die Sicherheit und
-    Integrität der Website und der Dienstleistung zu erfüllen. Die Seite bindet
-    Javascript und/oder CSS-Styles von externen Quellen ein. Auch hier habe ich
-    keine Kontrolle über mögliches Tracking, das dadurch verursacht wird.<br />
-    Haftungshinweis<br />
-    Ich übernehme keine Haftung für die Inhalte externer Links. Für den Inhalt
-    der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
+    <h2>Impressum</h2>
+    Github-Account von Geerd-Olaf Freyer auf
+    <a href="https://github.com/gofreyer">@gofreyer</a>
+    <h2>Datenschutz</h2>
+    <p>
+      Ich sammle keinerlei Daten. Diese Seite benutzt jedoch Ressourcen von
+      Drittanbietern, welche Tracking auslösen können.
+    </p>
+    <p>
+      Die Seite ist auf Github Pages gehostet, wobei ich keinen Einfluss habe,
+      welche Daten von Github gesammelt werden. Bitte beachten Sie dazu die
+      entsprechenden Informationen auf github.com. Github sammelt
+      personenbezogene Informationen von Besuchern, u.a. die IP, um gesetzliche
+      Bestimmungen zu erfüllen und die Sicherheit und Integrität der Website und
+      der Dienstleistung zu erfüllen.
+    </p>
+    <p>
+      Die Seite bindet Javascript und/oder CSS-Dateien von externen Quellen ein.
+      Auch hier habe ich keine Kontrolle über mögliches Tracking, das dadurch
+      verursacht wird.
+    </p>
+    <h2>Haftungshinweis</h2>
+    <p>
+      Ich übernehme keine Haftung für die Inhalte externer Links. Für den Inhalt
+      der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
+    </p>
   </body>
 </html>
