--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <button id="req_wu">Würselen</button>
       </div>
       <table class="table is-striped is-fullwidth" id="tabelle"></table>
+      <div class="nav"><a href="/impressum.html">Impressum</a></div>
     </div>
     <script type="text/javascript" src="index.js"></script>
   </body>
