--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -35,5 +35,10 @@
       Ich übernehme keine Haftung für die Inhalte externer Links. Für den Inhalt
       der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
     </p>
+    <p>
+      Die hier zur Verfügung gestellten Daten entstammen dem Open Data Portal der 
+      StädteRegion Aachen <a href="offenedaten.aachen.de">offenedaten.aachen.de</a> 
+      und werden hier im Rahmen der <a href="https://opendefinition.org/od/2.1/en/">Open Definition 2.1 Lizenz</a> genutzt.
+    </p>
   </body>
 </html>
