--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         align-items: center;
         margin-bottom: 10px;
       }
+      .berechnet {
+        color: red;
+      }
+      
     </style>
   </head>
 
