--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
       <table class="table is-striped is-fullwidth" id="tabelle"></table>
       <div class="nav"><a href="./pages/impressum.html">Impressum</a></div>
     </div>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
   </body>
 </html>
