--- a/index.html
+++ b/index.html
@@ -2,48 +2,57 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Demo Open Data Aachen: Corona-Informationen</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
-    <title>Opendata Aachen</title>
-    <style>
-      .nav {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-      }
-      .header {
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
-      }
-      .berechnet {
-        color: red;
-      }
-      
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&amp;display=swap"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-
   <body>
     <div class="container">
-      <div class="header">
-        <h1 class="title">Aktuelle Corona-Informationen</h1>
-        <div>
-          des
-          <a
-            href="https://offenedaten.aachen.de/dataset/aktuelle-lage-zum-corona-virus"
-            >Open Data Portals</a
-          >
-          der StädteRegion Aachen
+      <div class="banner intro">
+        <div class="header">
+          <h1 class="title">Aktuelle Corona-Informationen</h1>
+          <div class="nav">
+            <img
+              id="logo"
+              alt="Logo der StädteRegion Aachen"
+              src="https://upload.wikimedia.org/wikipedia/commons/8/80/Logo_St%C3%A4dteregion_Aachen.svg"
+              width="100"
+              height="50"
+            />
+            <div>
+              abgerufen vom
+              <a
+                href="https://offenedaten.aachen.de/dataset/aktuelle-lage-zum-corona-virus"
+                >Open Data Portal</a
+              >
+              der StädteRegion Aachen bzw. vom
+              <a
+                href="https://hub.arcgis.com/datasets/917fc37a709542548cc3be077a786c17_0"
+                >ArcGIS Hub</a
+              >
+              für die RKI-Zahlen
+            </div>
+          </div>
+
+          <div class="nav">
+            <button id="ueberblick">Überblick StädteRegion</button>
+            <!--<button id="rki">RKI Städteregion</button>-->
+          </div>
         </div>
       </div>
-      <div class="nav">
-        <button id="req_sr">Städteregion</button>
+      <table
+        class="table is-striped is-hoverable is-fullwidth is-narrow"
+        id="rki_tabelle"
+      ></table>
+      <div class="nav auswahl">
+        <button id="req_sr">StädteRegion</button>
         <button id="req_ac">Aachen</button>
         <button id="req_al">Alsdorf</button>
         <button id="req_ba">Baesweiler</button>
@@ -55,9 +64,15 @@
         <button id="req_st">Stolberg</button>
         <button id="req_wu">Würselen</button>
       </div>
-      <table class="table is-striped is-fullwidth" id="tabelle"></table>
-      <div class="nav"><a href="./pages/impressum.html">Impressum</a></div>
+      <table
+        class="table is-striped is-hoverable is-fullwidth is-narrow"
+        id="tabelle"
+      ></table>
+      <div class="nav">
+        <a href="./pages/impressum.html">Impressum &amp; Datenschutz</a>
+      </div>
     </div>
-    <script type="text/javascript" src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
