--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -8,41 +8,73 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&amp;display=swap"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Impressum</title>
   </head>
   <body>
-    <h1>Impressum und Datenschutz</h1>
+    <div class="container">
+      <div class="banner intro">
+        <h1 class="title">Impressum und Datenschutz</h1>
+      </div>
 
-    <h2>Impressum</h2>
-    Github-Account von Geerd-Olaf Freyer auf
-    <a href="https://github.com/gofreyer">@gofreyer</a>
-    <h2>Datenschutz</h2>
-    <p>
-      Ich sammle keinerlei Daten. Diese Seite benutzt jedoch Ressourcen von
-      Drittanbietern, welche Tracking auslösen können.
-    </p>
-    <p>
-      Die Seite ist auf Github Pages gehostet, wobei ich keinen Einfluss habe,
-      welche Daten von Github gesammelt werden. Bitte beachten Sie dazu die
-      entsprechenden Informationen auf github.com. Github sammelt
-      personenbezogene Informationen von Besuchern, u.a. die IP, um gesetzliche
-      Bestimmungen zu erfüllen und die Sicherheit und Integrität der Website und
-      der Dienstleistung zu erfüllen.
-    </p>
-    <p>
-      Die Seite bindet Javascript und/oder CSS-Dateien von externen Quellen ein.
-      Auch hier habe ich keine Kontrolle über mögliches Tracking, das dadurch
-      verursacht wird.
-    </p>
-    <h2>Haftungshinweis</h2>
-    <p>
-      Ich übernehme keine Haftung für die Inhalte externer Links. Für den Inhalt
-      der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.
-    </p>
-    <p>
-      Die hier zur Verfügung gestellten Daten entstammen dem Open Data Portal der 
-      StädteRegion Aachen <a href="https://offenedaten.aachen.de">offenedaten.aachen.de</a> 
-      und werden hier im Rahmen der <a href="https://opendefinition.org/od/2.1/en/">Open Definition 2.1 Lizenz</a> genutzt.
-    </p>
+      <h2 class="nav subtitle">Impressum</h2>
+      <div>
+        Github-Account <a href="https://github.com/gofreyer">@gofreyer</a>
+      </div>
+      <div>
+        <img
+          id="address"
+          alt="Geerd-Olaf Freyer"
+          src="../img/impressum.png"
+          width="140"
+          height="70"
+        />
+      </div>
+      <h2 class="nav subtitle">Datenschutz</h2>
+      <p>
+        Ich sammle keinerlei Daten.<br />Diese Seite benutzt jedoch Ressourcen
+        von Drittanbietern, welche Tracking auslösen können.
+      </p>
+      <p>
+        Die Seite ist auf Github Pages gehostet, wobei ich keinen Einfluss
+        darauf habe, welche Daten von Github gesammelt werden.<br />Bitte
+        beachten Sie dazu die entsprechenden Informationen auf
+        <a href="https://github.com/">github.com</a>.<br />Github sammelt
+        personenbezogene Informationen von Besuchern, u.a. die IP, um
+        gesetzliche Bestimmungen zu erfüllen und die Sicherheit und Integrität
+        der Website und der Dienstleistung zu erfüllen.
+      </p>
+      <p>
+        Die Seite bindet Javascript und CSS-Dateien von externen Quellen ein.<br />
+        Auch hier habe ich keine Kontrolle über mögliches Tracking, das dadurch
+        verursacht wird.
+      </p>
+      <h2 class="nav subtitle">Haftungshinweis</h2>
+      <p>
+        Ich übernehme keine Haftung für die Inhalte externer Links.<br />Für den
+        Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber
+        verantwortlich.
+      </p>
+      <p>
+        Die hier zur Verfügung gestellten Daten entstammen dem<br />Open Data
+        Portal der StädteRegion Aachen<br />
+        <a href="https://offenedaten.aachen.de">offenedaten.aachen.de</a
+        ><br />bzw. dem<br />
+        <a
+          href="https://hub.arcgis.com/datasets/917fc37a709542548cc3be077a786c17_0"
+          >ArcGIS Hub</a
+        ><br />
+        und werden hier im Rahmen der<br />
+        <a href="https://opendefinition.org/od/2.1/en/"
+          >Open Definition 2.1 Lizenz</a
+        ><br />
+        genutzt.
+      </p>
+      <div class="nav"><a href="../index.html">zurück</a></div>
+    </div>
   </body>
 </html>
