--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -29,7 +29,7 @@
         <img
           id="address"
           alt="Geerd-Olaf Freyer"
-          src="../img/impressum.png"
+          src="./impressum.png"
           width="140"
           height="70"
         />
