--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -49,7 +49,7 @@
         der Website und der Dienstleistung zu erfüllen.
       </p>
       <p>
-        Die Seite bindet Javascript und CSS-Dateien von externen Quellen ein.<br />
+        Die Seite bindet Javascript- und CSS-Dateien von externen Quellen ein.<br />
         Auch hier habe ich keine Kontrolle über mögliches Tracking, das dadurch
         verursacht wird.
       </p>
