--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -46,7 +46,7 @@
         <a href="https://github.com/">github.com</a>.<br />Github sammelt
         personenbezogene Informationen von Besuchern, u.a. die IP, um
         gesetzliche Bestimmungen zu erfüllen und die Sicherheit und Integrität
-        der Website und der Dienstleistung zu erfüllen.
+        der Website und der Dienstleistung zu gewährleisten.
       </p>
       <p>
         Die Seite bindet Javascript- und CSS-Dateien von externen Quellen ein.<br />
