--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 href="https://offenedaten.aachen.de/dataset/aktuelle-lage-zum-corona-virus"
                 >Open Data Portal</a
               >
-              der StädteRegion Aachen bzw. vom
+              der StädteRegion Aachen<br>bzw. vom
               <a
                 href="https://hub.arcgis.com/datasets/917fc37a709542548cc3be077a786c17_0"
                 >ArcGIS Hub</a
