--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 >ArcGIS Hub</a
               >
               für die RKI-Zahlen
-              <p>
+              <div class="nav">
                 <strong><italics>Leider werden die Daten für das Open Data Portal der StädteRegion Aachen seit dem 15.02.2022 nicht mehr aktualisiert.</italics></strong>
-              </p>
+              </div>
             </div>
           </div>
 
